# openbook

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.jsonc  .npmrc  .readthedocs.yaml  AGENTS.md  README-websocket-api.md  README.md  openbook-worker.service.template  openbook.service.template  package-lock.json  package.json  pyproject.toml  renovate.json  renovate.json5
.agents/agents/: frontend-typescript-developer.agent.md  ob-django-backend-feature-guide.agent.md  ob-frontend-developer.agent.md  ob-python-developer.agent.md  ob-tech-writer.agent.md  python-developer.agent.md  tech-writer.agent.md
.agents/skills/django-model-unit-tests/: SKILL.md
.agents/skills/drf-viewset-unit-tests/: SKILL.md
.agents/skills/ob-django-add-models-to-admin/: SKILL.md
.agents/skills/ob-django-create-app/: SKILL.md
.agents/skills/ob-django-create-fixtures/: SKILL.md
.agents/skills/ob-django-create-models/: SKILL.md
.agents/skills/ob-django-expose-model-in-rest-api/: SKILL.md
.agents/skills/ob-django-model-unit-tests/: SKILL.md
.agents/skills/ob-django-write-model-unit-tests/: SKILL.md
.agents/skills/ob-django-write-viewset-unit-tests/: SKILL.md
.agents/skills/ob-drf-viewset-unit-tests/: SKILL.md
.agents/skills/ob-git-commit-proposal/: SKILL.md
.agents/skills/ob-restructured-text-docs-styleguide/: SKILL.md
.agents/skills/restructured-text-docs-styleguide/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/actions/setup-ci-environment/: action.yml
.github/workflows/: build-docs.yml  codeql-analysis.yml  release.yml  run-renovate.yml  run-tests-dummy.yml  run-tests-full.yml  run-tests.yml
_docker/: docker-compose.yml
_docker/openbook/: Dockerfile
doc/: DEPENDENCIES.md  DEPLOYMENT.md  HACKING.md  REPOSITORY-SETUP.md
doc/img/: ui-application-frame.drawio
doc/specs/django-allauth-headless-api/: api-principles.md  basic-login-logout.md  social-login-saml.md
docker/: docker-compose.yml  package.json
docker/openbook/: .gitignore  Dockerfile  entrypoint.sh  local_settings.py
docker/webserver/: Caddyfile
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/administrators/: auth-setup.rst  basic-configuration.rst  changelog.rst  installation-and-updates.rst  installation-guide.rst  library-structure.rst
docs/administrators/img/: deployment-architecture.drawio
docs/developers/: ai-code-policy.rst  ai-coding-tips.rst  api-reference.rst  architecture.rst  backend-architecture.rst  dependency-policy.rst  development-process.rst  frontend-architecture.rst  howto-guides.rst  local-development.rst  repository-layout.rst  repository-setup.rst  versioning-and-releases.rst
docs/developers/img/: backend-source-modules.drawio
docs/educators/: content-creation.rst  course-management.rst  running-courses.rst  working-on-textbooks.rst
docs/getting-started/: code-of-conduct.rst  community.rst  design-decisions.rst  teaching-and-learning-with-ai.rst
docs/maintainers/: architecture.rst  dependency-policy.rst  development-process.rst  local-development.rst  repository-setup.rst  versioning-and-releases.rst
docs/reference/: api-reference.rst  changelog.rst  index.rst
docs/students/: learning-activities.rst  signup-and-account-management.rst  social-engagement.rst  textbooks-and-courses.rst
docs/user-guide/: accounts-and-authentication.rst  getting-started.rst  index.rst  overview-and-use-cases.rst  planned-topics.rst
src/: manage.py
src/frontend/: README.md  package.json
src/frontend/admin/: package.json
src/frontend/app/: .gitignore  openapitools.json  package.json  tailwind.css
src/libraries/core/: package.json
src/libraries/ls-compat/: package.json
src/openbook/: admin.py  apps.py  asgi.py  local_settings.py.template  settings.py  test.py  urls.py  wsgi.py
src/openbook/ai/: apps.py
src/openbook/auth/: apps.py  backends.py  routes.py  utils.py  validators.py
src/openbook/content/: apps.py  routes.py
src/openbook/core/: apps.py  context_processors.py  routes.py  validators.py
src/openbook/drf/: authentication.py  filters.py  flex_serializers.py  (+4 more)
tmp/django-allauth-headless-api/: account-management.md  index.md  social-login-saml.md
(+264 files in other folders)
